--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* ------------------------
+        Google Fonts
+------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+
+body {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  font-family: 'Lato', sans-serif;
+}
